# anycorn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
compliance/autobahn/: summarise.py  ws_server.py
compliance/h2spec/: http_server.py
compliance/h3spec/: cert.pem  http_server.py  key.pem
src/anycorn/: __init__.py  __main__.py  app_wrappers.py  config.py  datagram.py  events.py  lifespan.py  logging.py  run.py  statsd.py  task_group.py  tcp_server.py  typing.py  udp_server.py  utils.py  worker_context.py
src/anycorn/middleware/: __init__.py  dispatcher.py  http_to_https.py  proxy_fix.py  wsgi.py
src/anycorn/protocol/: __init__.py  events.py  h11.py  h2.py  h3.py  http_stream.py  quic.py  ws_stream.py
tests/: conftest.py  helpers.py  run_server.py  test___main__.py  test_app_wrappers.py  test_config.py  test_datagram.py  test_h2_multiplexing.py  test_h3_optional.py  test_keep_alive.py  test_lifespan.py  test_logging.py  test_performances.py  test_run.py  test_sanity.py  test_state_isolation.py  test_statsd.py  test_tcp_server.py  test_utils.py  test_worker_context.py
tests/assets/: config.py  config_daemon_false.py  config_ssl.py  daemon_app.py  pid_app.py
tests/e2e/: _subprocess.py  conftest.py  test_daemon.py  test_dispatcher_scope.py  test_h3.py  test_httpx.py  test_httpx2.py  test_port_in_use.py  test_reload.py  test_sighup.py  test_worker_serve_signal_fallback.py  test_wsgi_close.py  test_wsgi_generator_headers.py
tests/middleware/: test_dispatcher.py  test_http_to_https.py  test_proxy_fix.py
tests/protocol/: test_h11.py  test_h2.py  test_h3.py  test_http_stream.py  test_quic.py  test_ws_stream.py
