[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "anycorn"
version = "0.0.0"
requires-python = ">=3.10"
description = "A fork of Hypercorn that uses AnyIO"
authors = [
    { name = "Philip Graham Jones", email = "philip.graham.jones@googlemail.com" },
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidbrochart/anycorn/"

dependencies = [
    "exceptiongroup >=1.1.0,<2.0; python_version<'3.11'",
    "h11",
    "h2 >=3.1.0",
    "hpack",
    "anyio >=4.0,<5.0",
    "priority",
    "tomli; python_version<'3.11'",
    "typing_extensions; python_version<'3.11'",
    "wsproto >=0.14.0",
    "rich-click >=1.8.3,<2.0.0",
]

[project.optional-dependencies]
h3 = [
    "aioquic >=1.2.0,<2.0.0",
]
[dependency-groups]
test = [
    "anycorn[h3]",
    "httpx",
    "pytest",
    "mock",
    "trio",
]
dev = [
    { include-group = "test" },
    "ruff>=0.15.6",
    "ty>=0.0.22",
]

[project.scripts]
anycorn = "anycorn.__main__:main"

[tool.pytest.ini_options]
addopts = "--showlocals --strict-markers --color=yes -v"
testpaths = ["tests"]

[tool.ruff]
lint.extend-select = [# https://docs.astral.sh/ruff/settings/#extend-select
    "ALL",
]
lint.extend-ignore = [# https://docs.astral.sh/ruff/settings/#extend-ignore
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "TD001", # invalid-todo-tag
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    "TD004", # missing-todo-colon
    "TD005", # missing-todo-description
    "FIX001", # line-contains-fixme
    "FIX002", # line-contains-todo
]
src = ["src", "tests"]  # https://docs.astral.sh/ruff/settings/#src
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = [
    "ANN204",
    "D102",
    "D103",
    "EM101",
    "ERA001",
    "SLF001",
    "TRY003"
]
